# postgres-entra-auth

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  README.md  run-dotnet-checks.ps1  run-python-checks.ps1
python/: CHANGELOG.md  README.md  pyproject.toml
python/samples/psycopg2/getting_started/: async_pool_utils.py  create_db_connection.py  create_db_connection_psycopg2.py  create_everlasting_db_connection.py  create_everlasting_db_connection_psycopg2.py
python/samples/psycopg3/getting_started/: .env.example  create_db_connection.py  create_db_connection_psycopg3.py  create_everlasting_db_connection.py  create_everlasting_db_connection_psycopg3.py
python/samples/sqlalchemy/getting_started/: create_db_connection.py  create_db_connection_sqlalchemy.py  create_everlasting_db_connection.py  create_everlasting_db_connection_sqlalchemy.py
python/src/azure_postgresql_auth/: __init__.py  core.py  errors.py
python/src/azure_postgresql_auth/psycopg2/: __init__.py  entra_connection.py
python/src/azure_postgresql_auth/psycopg3/: __init__.py  async_entra_connection.py  entra_connection.py
python/src/azure_postgresql_auth/sqlalchemy/: __init__.py  async_entra_connection.py  entra_connection.py
python/src/azurepg_entra/: __init__.py  core.py  errors.py
python/src/azurepg_entra/psycopg2/: __init__.py  entra_connection.py  psycopg2_entra_id_extension.py
python/src/azurepg_entra/psycopg3/: __init__.py  async_entra_connection.py  entra_connection.py  psycopg3_entra_id_extension.py
python/src/azurepg_entra/sqlalchemy/: __init__.py  async_entra_connection.py  entra_connection.py  sqlalchemy_entra_id_extension.py
python/tests/azure/data/postgresql/: test_core_functionality.py  test_utils.py
python/tests/azure/data/postgresql/psycopg2/: test_entra_id_extension.py  test_psycopg2_entra_id_extension.py
python/tests/azure/data/postgresql/psycopg3/: test_entra_id_extension.py  (+1 more)
python/tests/azure_postgresql_auth/: test_utils.py
python/tests/azure_postgresql_auth/psycopg2/: test_entra_id_extension.py
python/tests/azure_postgresql_auth/psycopg3/: test_entra_id_extension.py
python/tests/azure_postgresql_auth/sqlalchemy/: test_entra_id_extension.py
python/tests/azurepg_entra/: test_utils.py
python/tests/azurepg_entra/psycopg2/: test_entra_id_extension.py
python/tests/azurepg_entra/psycopg3/: test_entra_id_extension.py
python/tests/azurepg_entra/sqlalchemy/: test_entra_id_extension.py
(+81 files in other folders)
