[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "azurepg-entra"
version = "0.0.1"
description = "Entra ID integration helpers for Azure Database for PostgreSQL (psycopg / SQLAlchemy)."
readme = "README.md"
authors = [
  {name = "Arjun Narendra", email = "v-anarendra@microsoft.com"}
]
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "azure-identity>=1.13.0",
  "azure-core>=1.24.0"
]

[project.optional-dependencies]
# psycopg3 (modern psycopg) support
psycopg3 = [
  "psycopg[binary]>=3.1.0",
  "psycopg-pool>=3.1.0"
]

# psycopg2 (legacy psycopg) support
psycopg2 = [
  "psycopg2-binary>=2.9.0",
  "aiopg>=1.4.0"
]

# SQLAlchemy support
sqlalchemy = [
  "sqlalchemy>=2.0.0",
  "psycopg[binary]>=3.1.0"
]

# Development dependencies (testing, examples, etc.)
dev = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "python-dotenv>=1.0.0"
]

# All database drivers combined
drivers = [
  "psycopg[binary]>=3.1.0",
  "psycopg-pool>=3.1.0",
  "psycopg2-binary>=2.9.0",
  "aiopg>=1.4.0",
  "sqlalchemy>=2.0.0",
  "asyncpg>=0.28.0"
]

# All optional dependencies combined
all = [
  "psycopg[binary]>=3.1.0",
  "psycopg-pool>=3.1.0",
  "psycopg2-binary>=2.9.0",
  "aiopg>=1.4.0", 
  "sqlalchemy>=2.0.0",
  "asyncpg>=0.28.0",
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "python-dotenv>=1.0.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["azurepg_entra*"]

[project.urls]
Homepage = "https://github.com/v-anarendra_microsoft/entra-id-integration-for-drivers"
Issues = "https://github.com/v-anarendra_microsoft/entra-id-integration-for-drivers/issues"

# Installation examples:
# Basic package only (core Azure Identity):  pip install -e .
# With psycopg3 support:                     pip install -e ".[psycopg3]"
# With psycopg2 support:                     pip install -e ".[psycopg2]" 
# With SQLAlchemy support:                   pip install -e ".[sqlalchemy]"
# With development tools:                    pip install -e ".[dev]"
# With all drivers:                          pip install -e ".[drivers]"
# Everything:                                pip install -e ".[all]"
